[project]
name = "pyoci"
version = "0.1.0"
authors = [{ name = "hazyfossa", email = "hazyfossa@gmail.com" }]
description = "OCI-runtime spec represented as python objects."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
]
dependencies = ["msgspec >=0.18.6,<1"]

[project.urls]
Homepage = "https://github.com/hazyfossa/pyoci"
Issues = "https://github.com/hazyfossa/pyoci/issues"

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"
